# CILViewer

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  install_notes.txt  preview.py  setup.py  test.py  untitled0.py  utils
.github/: pull_request_template.md
.github/workflows/: README.md  autoyapf.yml  conda_build_and_publish.yml  docker_build_test_publish.yml  pull_request_template.md  update_version_badge.yaml
Documentation/: documentation.md
Documentation/singlewidgetviewer/: singlewidgetviewer.md
Documentation/triwidgetviewer/: triWidgetViewer.md
Wrappers/Python/: notes.md  setup.py
Wrappers/Python/ccpi_viewer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Wrappers/Python/conda-recipe/: README.md  bld.bat  build.sh  conda_build_config.yaml  environment.yml  meta.yaml  ui_env.yml
Wrappers/Python/examples/: 2Dimage_reading.py  BoxWidgetAroundSlice.py  FourDockableLinkedViewerWidegets.py  FourDockableLinkedViewerWidgets.py  SingleViewerCentralWidget.py  SingleViewerCentralWidget2.py  SliceBorderWidget.py  cubesource_clip.py  (+15 more)
ccpi/: __init__.py
ccpi/viewer/: CILViewer2D.py  QVTKCILViewer.py  __init__.py  embedvtk.py
conda-recipe/: bld.bat  build.sh  meta.yaml
docker/web-app/: Dockerfile  README.md  clone-and-install.sh  create-data-folder.sh  entrypoint.sh  environment.yml  install-mambaforge-and-env.sh
js/: test_vtk.html
pics/: viewer.pptx
src/: CMakeLists.txt  README.md  Viewer3D.cxx
src/Wrapping/: CMakeLists.txt
src/include/: Viewer3D.h
test/: demo.py  numpy2vtk.py  test.py
(+110 files in other folders)
